# eggo

./: .addusertest.cpp.swp  .popclient2.cpp.swp  .unitTests.cpp.swp  CMakeLists.txt  README.md  SMTPclient.cpp  SMTPclient1.cpp  SMTPserver.cpp  TODO  UnitTests.cpp  addusertest.cpp  client.cpp  componentTests.cpp  globals.h  main.cpp  msgqueue.c  popclient.cpp  popclient1.cpp  popclient2.cpp  popclient3.cpp  popserver.cpp  server.cpp  smtp_receiver.cpp  smtp_receiver.h  smtp_sender.cpp  smtp_sender.h  unitTests.cpp  unitTests.sh  zhelpers.h
PopeAssWing/: CMakeLists.txt  Connection.h  EventData.cpp  EventData.h  EventData.h~  FiniteStateMachine.h  SMTPConnection.cpp  SMTPConnection.cpp~  SMTPConnection.h  SMTPConnection.h~  SMTPState.cpp  SMTPState.cpp~  SMTPState.h  SMTP_States.h  SMTP_States.h~  a.out  globals.h  globals.h~  test.cpp  test.cpp~  test1.cpp  test2.cpp  test2.cpp~
include/: .SMTPevent.h.swp  .SMTPstates.h.swp  .globals.h.swp  .top.h.swp  Globals.h  POPevent.h  POPsession.h  POPstate.h  POPstates.h  PieceOfMail.h  SMTP_States.h  SMTP_event.h  SMTP_states.h  SMTPevent.h  SMTPsession.h  SMTPstate.h  SMTPstates.h  UserCollection.h  connection.h  editUserCollection.h  event.h  globals.h  top.h  user.h
src/: .POPsession.cpp.swp  .POPstates.cpp.swp  .SMTPsession.cpp.swp  .SMTPstates.cpp.swp  .editUserCollection.cpp.swp  POPevent.cpp  POPsession.cpp  POPstates.cpp  PieceOfMail.cpp  SMTP_States.cpp  SMTP_event.cpp  SMTPevent.cpp  SMTPsession.cpp  SMTPstates.cpp  UserCollection.cpp  editUserCollection.cpp  event.cpp  top.cpp  user.cpp
